fix menu on mobile

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1272,12 +1272,11 @@ img {
 .nav .speciesHTML {
   position: fixed;
   left: 0;
-  bottom: 0;
+  top: 0;
   width: 100vw;
   height: 100vh;
-  padding-top: 20vh;
   background: white;
-  padding: 0 1em;
+  padding: 4em 1em 0em 1em;
   overflow: auto;
   z-index: 399;
 }
@@ -1311,9 +1310,7 @@ img {
 
 .nav .speciesHTML .listNumber {
   position: absolute;
-  left: 0;
-  -webkit-transform: translate(-50%, 0);
-          transform: translate(-50%, 0);
+  left: -0.5em;
   font-size: 1.5em;
   color: #ccc;
 }
